# smart-data-processing-assistant-pathfinder

./: README.md  app.py  create_presentation.py  presentation.md  presentation_guide.md  pyproject.toml  requirements.txt  smart_data_processing_assistant_presentation.pptx
.github/: copilot-instructions.md
src/property_data_cleaning/: __init__.py  duplicate_detection.py  email_sender.py  file_handler.py  missing_value.py  normalization.py  processor.py  validators.py
src/property_data_cleaning.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_processor.py
